--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,10 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SignUpActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/returnIconView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="@string/return_icon"
+        app:srcCompat="@drawable/return_icon" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="231dp"
+        android:layout_height="140dp"
+        android:layout_gravity="center"
+        android:contentDescription="@string/logo"
+        app:srcCompat="@drawable/logo"
+        tools:layout_editor_absoluteX="259dp"
+        tools:layout_editor_absoluteY="403dp" />
+
+    <TextView
+        android:id="@+id/name_label"
+        android:layout_width="114dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/first_name_label"
+        android:textColor="@color/dark_blue" />
+
+    <EditText
+        android:id="@+id/main_et_name"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:hint="@string/user_name"
+        android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_et_last_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/returnIconView" />
+
+
+    <TextView
+        android:id="@+id/last_name_label"
+        android:layout_width="114dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
+        android:labelFor="@id/main_et_last_name"
+        android:text="@string/last_name_label"
+        android:textColor="@color/dark_blue" />
+
+    <EditText
+        android:id="@+id/main_et_last_name"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:hint="@string/user_last_name"
+        android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_et_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_et_name" />
+
+    <TextView
+        android:id="@+id/email_label"
+        android:layout_width="114dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
+        android:labelFor="@id/main_et_name"
+        android:text="@string/email_label"
+        android:textColor="@color/dark_blue" />
+
+    <EditText
+        android:id="@+id/main_et_email"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_et_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_et_last_name" />
+
+    <TextView
+        android:id="@+id/password_label"
+        android:layout_width="114dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
+        android:labelFor="@id/main_et_password"
+        android:text="@string/password_label"
+        android:textColor="@color/dark_blue" />
+
+    <EditText
+        android:id="@+id/main_et_password"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_btn_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_et_email" />
+
+    <LinearLayout
+        android:layout_width="200dp"
+        android:layout_height="32dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/add_img_view"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="54dp"
+            android:layout_marginTop="10dp"
+            android:contentDescription="@string/add_img"
+            app:srcCompat="@drawable/add_icon"
+            app:tint="@color/add_icon_grey" />
+
+        <TextView
+            android:id="@+id/add_img"
+            android:layout_width="140dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="0dp"
+            android:fontFamily="@font/montserrat"
+            android:labelFor="@id/main_et_password"
+            android:text="@string/add_img"
+            android:textColor="@color/dark_blue" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/main_btn_register"
+        android:layout_width="311dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/dark_orange"
+        android:fontFamily="@font/montserrat"
+        android:onClick="register"
+        android:text="@string/register_button"
+        tools:layout_editor_absoluteX="145dp" />
+
+</LinearLayout>
