--- a/app/src/main/res/layout/alterar_endereco.xml
+++ b/app/src/main/res/layout/alterar_endereco.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="96dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/imagem1"
+        app:srcCompat="@drawable/logotipo"
         android:contentDescription="Submit button"/>
 
     <ImageButton
