--- a/app/src/main/res/layout/sobre.xml
+++ b/app/src/main/res/layout/sobre.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/sobre"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -54,7 +54,7 @@
         app:srcCompat="@drawable/fundo_sobrenos" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView62"
         android:layout_width="310dp"
         android:layout_height="228dp"
         android:layout_marginTop="12dp"
@@ -93,7 +93,7 @@
         app:srcCompat="@drawable/icon_usser" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView71"
         android:layout_width="168dp"
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
