--- a/app/src/main/res/layout/recuperacao_password.xml
+++ b/app/src/main/res/layout/recuperacao_password.xml
@@ -31,61 +31,82 @@
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="281dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Insira nova palavra-passe"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:hint="Insira o primeiro nome"
         android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
     <EditText
         android:id="@+id/editTextText3"
-        android:layout_width="283dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
         android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         android:hint="Repita nova palavra-passe"/>
 
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="269dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="18dp"
         android:text="Nova palavra-passe:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:textColor="@color/dark_blue"/>
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="269dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="Submit button"
         android:text="Repita nova palavra-passe:"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        android:contentDescription="Submit button"/>
+        android:textColor="@color/dark_blue"/>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="215dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/main_btn_register"
+        android:layout_width="311dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/dark_orange"
+        android:fontFamily="@font/montserrat"
+        android:onClick="login"
         android:text="Guardar palavra-passe"
+        tools:layout_editor_absoluteX="145dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
