--- a/app/src/main/res/layout/alterar_endereco.xml
+++ b/app/src/main/res/layout/alterar_endereco.xml
@@ -31,31 +31,44 @@
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="281dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="user1@gmail.com"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
         android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
+        android:hint="user1@gmail.com"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="269dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="18dp"
         android:text="Endereço de email:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:textColor="@color/dark_blue"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/main_btn_register"
         android:layout_width="311dp"
-        android:layout_height="75dp"
-        android:text="Guardar endereço de email"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/dark_orange"
+        android:fontFamily="@font/montserrat"
+        android:onClick="login"
+        android:text="Alterar endereço de email"
+        tools:layout_editor_absoluteX="145dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
