--- a/app/src/main/res/layout/alterar_morada.xml
+++ b/app/src/main/res/layout/alterar_morada.xml
@@ -31,23 +31,35 @@
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="281dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Rua das Palmeiras 31"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
         android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
+        android:hint="Rua das Palmeiras 31"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/editTextText3"
-        android:layout_width="283dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
         android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,33 +68,44 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="144dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/dark_blue"
         android:text="Morada:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="144dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="4dp"
+        android:contentDescription="Submit button"
+        android:fontFamily="@font/montserrat"
         android:text="Código Postal:"
+        android:textColor="@color/dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        android:contentDescription="Submit button"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
     <EditText
         android:id="@+id/editTextCity"
-        android:layout_width="287dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:autofillHints="username"
+        android:background="@drawable/border_input"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
         android:inputType="text"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,10 +115,12 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="144dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="0dp"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/dark_blue"
         android:text="Cidade:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText3"
@@ -103,9 +128,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="215dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="311dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/dark_orange"
+        android:fontFamily="@font/montserrat"
         android:text="Guardar morada"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
