Retira background do return icon

--- a/app/src/main/res/layout/recuperacao_password.xml
+++ b/app/src/main/res/layout/recuperacao_password.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white"
         app:srcCompat="@mipmap/btnback"
         android:contentDescription="Submit button"/>
 
