Altera src do icon de return e seta seu background para transparente, e cria a cor personalizada transparent

--- a/app/src/main/res/layout/recuperacao_password.xml
+++ b/app/src/main/res/layout/recuperacao_password.xml
@@ -20,14 +20,14 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="38dp"
+        android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/white"
-        app:srcCompat="@mipmap/btnback"
+        android:background="@color/transparent"
+        app:srcCompat="@drawable/return_icon"
         android:contentDescription="Submit button"/>
 
     <EditText
