--- a/app/src/main/res/layout/recuperacao_password.xml
+++ b/app/src/main/res/layout/recuperacao_password.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logotipo"
-        android:contentDescription="Submit button"/>
+        android:contentDescription="@string/logo"/>
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/transparent"
         app:srcCompat="@drawable/return_icon"
-        android:contentDescription="Submit button"/>
+        android:contentDescription="@string/return_icon"/>
 
     <EditText
         android:id="@+id/editTextText2"
@@ -40,7 +40,7 @@
         android:background="@drawable/border_input"
         android:fontFamily="@font/montserrat"
         android:gravity="center_vertical"
-        android:hint="Insira o primeiro nome"
+        android:hint="@string/new_password"
         android:inputType="text"
         android:paddingStart="24dp"
         android:paddingEnd="0dp"
@@ -64,7 +64,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:hint="Repita nova palavra-passe"/>
+        android:hint="@string/retype_password"/>
 
 
     <TextView
@@ -73,7 +73,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="18dp"
-        android:text="Nova palavra-passe:"
+        android:text="@string/new_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         android:textColor="@color/dark_blue"/>
@@ -84,8 +84,8 @@
         android:layout_height="22dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="20dp"
-        android:contentDescription="Submit button"
-        android:text="Repita nova palavra-passe:"
+        android:contentDescription="@string/password_label"
+        android:text="@string/retype_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
