--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="dark_blue">#0C5475</color>
     <color name="dark_orange">#E25E3E</color>
     <color name="add_icon_grey">#40000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
