Muda contexto do ficheiro recuperacao_password.xml, de MainActivity para RecuperacaoPasswordActivity

--- a/app/src/main/res/layout/recuperacao_password.xml
+++ b/app/src/main/res/layout/recuperacao_password.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RecuperacaoPasswordActivity">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -100,8 +100,8 @@
         android:layout_marginTop="48dp"
         android:backgroundTint="@color/dark_orange"
         android:fontFamily="@font/montserrat"
-        android:onClick="login"
-        android:text="Guardar palavra-passe"
+        android:onClick="recovery_password"
+        android:text="@string/recovery_password_button"
         tools:layout_editor_absoluteX="145dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
