Implementa alterações no layout do xml de recuperação de password

--- a/app/src/main/res/layout/recuperacao_password.xml
+++ b/app/src/main/res/layout/recuperacao_password.xml
@@ -40,7 +40,7 @@
         android:background="@drawable/border_input"
         android:fontFamily="@font/montserrat"
         android:gravity="center_vertical"
-        android:hint="@string/new_password"
+        android:hint="@string/insert_recovery_code"
         android:inputType="text"
         android:paddingStart="24dp"
         android:paddingEnd="0dp"
@@ -64,7 +64,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:hint="@string/retype_password"/>
+        android:hint="@string/new_password"/>
 
 
     <TextView
@@ -73,7 +73,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="18dp"
-        android:text="@string/new_password"
+        android:text="@string/insert_recovery_code"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         android:textColor="@color/dark_blue"/>
@@ -85,7 +85,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="20dp"
         android:contentDescription="@string/password_label"
-        android:text="@string/retype_password"
+        android:text="@string/new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
         android:layout_marginTop="48dp"
         android:backgroundTint="@color/dark_orange"
         android:fontFamily="@font/montserrat"
-        android:onClick="recovery_password"
+        android:onClick="recoveryPassword"
         android:text="@string/recovery_password_button"
         tools:layout_editor_absoluteX="145dp"
         app:layout_constraintBottom_toBottomOf="parent"
