--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -22,7 +22,13 @@
 
     <FrameLayout
         android:id="@+id/autocomplete_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_width="336dp"
+        android:layout_height="47dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="21dp"
+        android:background="@drawable/border_input_background_white"
+        android:backgroundTint="@color/white"
         android:layout_alignParentTop="true"/>
 </RelativeLayout>
