--- a/app/src/main/res/layout/activity_update_email.xml
+++ b/app/src/main/res/layout/activity_update_email.xml
@@ -57,8 +57,7 @@
         android:layout_height="75dp"
         android:backgroundTint="@color/dark_orange"
         android:fontFamily="@font/montserrat"
-        android:onClick="Guardar endereço de email"
-        android:text="Guardar endereço de email"
+        android:text="@string/save_email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
