--- a/app/src/main/res/layout/activity_update_adress.xml
+++ b/app/src/main/res/layout/activity_update_adress.xml
@@ -106,7 +106,7 @@
         android:layout_width="215dp"
         android:layout_height="55dp"
         android:layout_marginTop="16dp"
-        android:text="Guardar morada"
+        android:text="@string/save_address"
         android:backgroundTint="@color/dark_orange"
         android:fontFamily="@font/montserrat"
         app:layout_constraintBottom_toBottomOf="parent"
