--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -107,7 +107,7 @@
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
